css/include/initial.css
/* ... */
@media all and (max-width: 649px) {
	#page-metadata {
		overflow: visible;
		font-size: calc((17/18) * var(--GW-base-font-size));
	}
	#page-description {
		margin: 0 auto 1em auto;
		line-height: calc(25/17);
	}
    #page-metadata > .link-tags,
    #page-metadata-block {
    	text-align: center;
    }
    #page-metadata > .link-tags {
    	margin: 0 auto 0.75em auto;
    }
	#page-metadata-block {
		font-size: calc((16/18) * var(--GW-base-font-size));
    	line-height: calc(25/16);
    }
	#page-metadata-block > #page-status::after,
	#page-metadata-block > #page-importance::after {
		content: none;
	}
}

/*=--------=*/
/*= /index =*/
/*=--------=*/

/*  Header self-links on home page need not be full-width. */
body.index article #markdownBody section:not(.collapse) > h1:first-child a {
    display: inline;
}

/*	On the index page, we hide article-related formatting, begging, to make it
	more compact & classy.
 */
body.index #sidebar a.patreon,
body.index #TOC,
body.index #page-metadata,
body.index header {
    display: none;
}

/*  No index self-link. */
body.index #sidebar a#logo {
    pointer-events: none;
}

body.index #markdownBody section h1 {
    border-bottom: 1px dotted currentColor;
}

/*  Columns.
 */

/* Suppress bonus section in single/double-column layout */
body.index #markdownBody #notable {
    display: none;
}

@media only screen and (min-width: 961px) {
    body.index #markdownBody {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-column-gap: 2em;
        grid-row-gap: 0.5em;
    }
    body.index #markdownBody .abstract {
        grid-column-start: 1;
        grid-column-end: -1;
    }
    body.index #markdownBody section > ul {
        margin: 0.75em 3em 0 0.25em;
    }
    @media only screen and (max-width: 1040px) {
        body.index #markdownBody {
            grid-template-columns: 1fr;
        }
        body.index #markdownBody section > ul {
            column-count: 2;
            column-gap: 3em;
        }
        body.index #markdownBody section > ul li {
            break-inside: avoid;
        }
    }
}

/*	On sufficiently-wide screens, we can get 3 columns in nicely; to preserve
	the initial row being ‘meta’ blocks, we leave #notable visible
	(for a newest/popular/notable triplet)
 */
@media only screen and (min-width: 2050px) {
    body.index #markdownBody #notable {
        display: block;
    }
    body.index #markdownBody {
        grid-template-columns: 45ch 45ch 45ch;
    }
}

/*  Abstract is not a real abstract, just an introduction, no need for the
	abstract formatting.
 */
body.index .abstract {
    padding: 0;
    border: none;
    margin: 0;
    box-shadow: none;
}

/*  Add some vertical padding for the introduction.
 */
body.index #markdownBody {
    padding-top: 15px;
}

/*  Headings on the home page.
 */
body.index #markdownBody h1 {
    margin: 1.125em 0 0 0;
}

/*  Lists on the home page.
 */
body.index #markdownBody .section-link-list li,
body.index #markdownBody .section-link-list li p {
    text-align: left;
}
body.index #markdownBody .section-link-list {
    margin: 1em 3em 0 0;
    padding: 0 0 0 1.375em;
}
body.index #markdownBody .section-link-list li > ul {
    margin: 0;
}
body.index #markdownBody .section-link-list li {
    margin-top: 0;
}
body.index #markdownBody .section-link-list > li:nth-of-type(n+2),
body.index #markdownBody .section-link-list ul > li:nth-of-type(n+2) {
    margin: 0;
}

@media only screen and (max-width: 649px) {
    body.index #markdownBody section {
        max-width: 100%;
    }
    body.index #markdownBody .section-link-list {
        overflow-wrap: break-word;
        margin-right: 0;
    }
    body.index #markdownBody .section-link-list li {
        line-height: 1.65;
        padding: 1px 0;
        margin: 2px 0 0 0;
    }
    body.index #markdownBody .section-link-list > li::before,
    body.index #markdownBody .section-link-list ul > li::before {
        top: 0.25em;
    }
}

/*********************/
/* TABLE OF CONTENTS */
/*********************/

#TOC {
    margin: 0 2rem 1.5rem 0;
    padding: 0.5em 0.5em 0.75em 0.75em;
    position: relative;
    z-index: 11;
}
.TOC {
    border: 1px solid var(--GW-TOC-border-color);
    background-color: var(--GW-TOC-background-color);
    font-family: var(--GW-sans-serif-font-stack);
    line-height: 1.25;
}

.TOC:empty {
    display: none;
}

/*  On mobile, we want the TOC to be inline, but for desktop, we want it
	side by side with the content.
 */
@media all and (max-width: 1280px) {
    #TOC {
        font-size: 0.95rem;
    }
}
@media all and (max-width: 1200px) {
    #TOC {
        font-size: 0.90rem;
    }
}
@media all and (max-width: 1120px) {
    #TOC {
        font-size: 0.85rem;
        margin: 0 1.5rem 1.25rem 0;
    }
}
@media all and (max-width: 1040px) {
    #TOC {
        font-size: 0.80rem;
        margin: 0 1.25rem 1rem 0;
    }
}
@media all and (max-width: 960px) {
    #TOC {
        margin: 0 1rem 1rem 0;
    }
}
@media all and (min-width: 901px) {
    #TOC {
        float: left;
        max-width: 285px;
    }
}
@media all and (max-width: 900px) {
    #TOC {
        float: none;
        clear: both;
        margin: 2em auto;
        font-size: 1rem;
    }
    #TOC {
		padding: 0.5em 0.5em 0.5em 0.625em;
	}
	#TOC li {
		padding-left: 0;
	}
	#TOC ul li::before {
		content: none;
	}

	#TOC > ul {
		column-count: 2;
		margin: 0;
		column-gap: 1.25em;
	}

	#TOC {
		background-image:
			linear-gradient(var(--GW-TOC-border-color),
							var(--GW-TOC-border-color));
		background-repeat: no-repeat;
		background-size: 1px 100%;
		background-position: 50% 0;
	}
}
/* ... */

